src- Version 4.19/objects/Currency__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Stores the different types of Currencies like GBP, USD etc.</description>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <label>Obsolete Auto Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Name__c</fullName>
        <description>Indicates the Name of the Currency</description>
        <inlineHelpText>Indicates the Name of the Currency</inlineHelpText>
        <label>Currency Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol__c</fullName>
        <defaultValue>$Label.ButtonNew</defaultValue>
        <description>It stores the Symbol of one particular Currency.Say for example &apos;$&apos; for USD</description>
        <inlineHelpText>It stores the Symbol of one particular Currency.Say for example &apos;$&apos; for USD</inlineHelpText>
        <label>Currency Symbol</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <description>It stores the symbol of one particular currency.Say for example &apos;$&apos; for USD</description>
        <inlineHelpText>It stores the symbol of one particular currency.Say for example &apos;$&apos; for USD</inlineHelpText>
        <label>Obsolete_Symbol</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Currency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_Name__c</columns>
        <columns>Currency_Symbol__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Currency ISO Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Currency_ISO_Code_Cannot_be_changed</fullName>
        <active>true</active>
        <description>Currency ISO Code Cannot be changed</description>
        <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Currency ISO Code cannot be change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_Symbol_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>Currency Symbol Cannot Be Changed</description>
        <errorConditionFormula>ISCHANGED( Currency_Symbol__c )</errorConditionFormula>
        <errorDisplayField>Currency_Symbol__c</errorDisplayField>
        <errorMessage>Currency Symbol cannot be changed</errorMessage>
    </validationRules>
</CustomObject>